--- a/project/Project1/src/main/resources/application.properties
+++ b/project/Project1/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=Satara@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=Debug
+logging.level.org.hibernate.TYPE=TRACE
+
 
